src/scss/themes/fylr/components/_data-form.scss
// Data Form

/*
<div class="cui-data-form cui-data-form--movable-rows">
	<div class="cui-data-form-row cui-horizontal-layout">
		<div class="cui-horizontal-layout-left">
			<div class="cui-drag-handle-row"></div>
		</div>
		<div class="cui-horizontal-layout-center">
			<div class="cui-simple-form">
				<div class="cui-form-container">
					<div class="cui-form-row"> ... cui-input ... </div>
				</div>
			</div>
		</div>
		<div class="cui-horizontal-layout-right">
			<div class="cui-buttonbar"> ... delete button ... </div>
		</div>
	</div>
</div>


<div class="cui-data-form cui-data-form--movable-rows cui-data-form--multiple-fields cui-data-form--add-button">
	<vertical>
		<center>
			<div class="cui-data-form-row cui-horizontal-layout">
				<div class="cui-horizontal-layout-left">
					<div class="cui-drag-handle-row"></div>
				</div>
				<div class="cui-horizontal-layout-center">
					<div class="cui-simple-form">
						<div class="cui-form-container">
							<div class="cui-form-row"> ... cui-input ... </div>
						</div>
					</div>
				</div>
				<div class="cui-horizontal-layout-right">
					<div class="cui-buttonbar"> ... delete button ... </div>
				</div>
			</div>
		</center>
		<bottom>
			<buttonbar>
				<button> + </button>
			</buttonbar>
		</bottom>
	</vertical>
</div>
*/

.cui-data-form {
	&.cui-data-form--movable-rows {
		max-width: 100%;

		// todo: find use-case, commented out because of the nested-fields in the editor
		// > .cui-horizontal-layout > .cui-horizontal-layout-center {
		// 	// max-width: $data-field-width;
		// }

		> .cui-vertical-layout > .cui-vertical-layout-center > .cui-horizontal-layout > .cui-horizontal-layout-center {
			// max-width: $data-field-width; // ? where would we need to restrict this, shouldn't be the default
			overflow: visible; // show focus outline
		}

		&.cui-data-form--multiple-fields {
			> .cui-vertical-layout > .cui-vertical-layout-center > .cui-horizontal-layout > .cui-horizontal-layout-center {
				max-width: 100%;
			}
		}
	}

	// nested group
	&.cui-data-form--multiple-fields {
		> .cui-vertical-layout > .cui-vertical-layout-center > .cui-data-form-row {
			> .cui-horizontal-layout-center {
				@include data-form-field-group-indicator();

				.cui-form-key label, 
				.cui-form-key .cui-label {
					padding-top: 0;
				}
				
				.cui-form-tr:last-child {
					margin-bottom: 0;
				}
			}

			&:not(:last-child) {
				margin-bottom: $spacer;
			}
		}
	}

	&.cui-data-form--add-button {
		> .cui-vertical-layout > .cui-vertical-layout-bottom {
			padding-left: calc(#{$data-form-utilities-count} * #{$data-form-utilities-column-width} + #{$data-form-border-offset} - #{$btn-height/2});
		}
	}

	+ .cui-form-hint {
		margin-top: $spacer;
	}
}

// ! be aware: in fylr theme the .cui-data-form-row class will be applied outside of .cui-data-form 
// however this is also part of CUI data-form (see template above, as an example see .ez5-app-base-config-manager / _base-config.scss)
.cui-data-form-row {
	overflow: visible !important;
	width: 100%; // see editor: ez5-nested
	display: grid;
	grid-template-columns: repeat($data-form-utilities-count, $data-form-utilities-column-width) 1fr;
	grid-template-rows: auto;
	grid-template-areas: 'move delete content';

	&:not(:last-child) {
		margin-bottom: $spacer-sm;
	}

	> .cui-horizontal-layout-left {
		grid-area: move;
		align-self: start;

		.cui-drag-handle-row {
			margin: $spacer-xs 0;
			flex-grow: 0;
			cursor: grab;

			&.is-hidden {
				pointer-events: none;
				opacity: $disabled-opacity-icon;
			}
		}
	}

	> .cui-horizontal-layout-center {
		min-width: 0;
		grid-area: content;
		margin-left: $data-form-border-offset;

		// todo: move into theme _fields.scss
		.ez5-nested-fields {
			margin-bottom: 0 !important;
		}

		> * {
			width: 100%;
		}
	}

	> .cui-horizontal-layout-right {
		grid-area: delete;
		align-self: start;

		.cui-buttonbar {
			height: 100%;
		}

		.cui-button-button {
			@include button-icon();
		}
	}

	// used only in ez5-nested-table
	&.cui-data-form-row--read-only {
		.cui-drag-handle-row {
			opacity: 0 !important;
		}
	}

	// on mouseenter of the row
	&.cui-data-form-row--trash {
		> .cui-horizontal-layout-center {
			opacity: $disabled-opacity-icon;
		}
	}
}

